# hinoki

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
doc/: adb-connection.md  cli.md  conventions.md  deploy.md  dsl-reference.md  internals.md  testing.md
examples/blog/: README.md  hinoki.yml
examples/blog/app/controllers/: analytics_controller.sql  articles.controller.hk
examples/blog/app/models/: article.model.hk
examples/blog/app/views/articles/: edit.html  index.html  new.html  show.html
examples/blog/config/: database.yml  routes.hk
examples/blog/db/migrate/: 20260404000001_create_articles.hk  20260404000002_create_comments.hk
hinoki/: __init__.py  cli.py
hinoki.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
hinoki/core/: hinoki_controller.sql  hinoki_core.sql  hinoki_migrate.sql  hinoki_model.sql  hinoki_router.sql  hinoki_view.sql  install.sql
hinoki/transpiler/: __init__.py  controller_gen.py  migration_gen.py  model_gen.py  parser_utils.py  routes_gen.py
tests/: conftest.py  test_transpiler.py
tests/e2e/: test_adb_e2e.py  test_blog_e2e.py  test_transpiler_e2e.py
